--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,8 @@
 @import "./global.scss";
 @import "./button/button.scss";
 @import "./index/index.scss";
+@import "./header/header.scss";
+@import "./footer/footer.scss";
 
 
 
