--- a/source/sass/button/button.scss
+++ b/source/sass/button/button.scss
@@ -10,3 +10,15 @@
   color: #444444;
   text-transform: uppercase;
 }
+.button_without-border{
+  @include reset-btn();
+  width: 260px;
+  height: 52px;
+  border: none;
+  text-align: center;
+  font-weight: $bold;
+  line-height: 20px;
+  font-size: 17px;
+  color: #444444;
+  text-transform: uppercase;
+}
