--- a/source/sass/index/contacts/contacts.scss
+++ b/source/sass/index/contacts/contacts.scss
@@ -12,9 +12,10 @@
   }
   &__map {
     margin-top: 40px;
-    width: 130%;
+    width: 320px;
     position: relative;
-    left: -18%;
+    margin-left: -30px;
+    
   }
   &__table-cell_width {
     width: 145px;
