--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,63 +1,79 @@
 html {
-    box-sizing: border-box;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-  body {
-    margin: 0;
-  
-    font-family: $font-main;
-    font-size: $main-font-size;
-    font-weight: $light;
-    line-height: 22px;
-    color: $color-main;
-  
-    min-width: 320px;
-  }
-  
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  button {
-    cursor: pointer;
-  }
-  
-  .visually-hidden,
-  input[type="checkbox"].visually-hidden,
-  input[type="radio"].visually-hidden {
-    position: absolute;
-  
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-  
-    white-space: nowrap;
-  
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-  .container{
-    width: 260px;
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  overflow-x: hidden;
+  font-family: $font-main;
+  font-size: $main-font-size;
+  font-weight: $light;
+  line-height: 22px;
+  color: $color-main;
+
+  min-width: 320px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  height: auto;
+}
+
+button {
+  cursor: pointer;
+}
+
+.visually-hidden,
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.container {
+  width: 260px;
   margin-left: auto;
   margin-right: auto;
+}
+tbody,
+.product__table {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 668px;
+    margin-left: auto;
+    margin-right: auto;
   }
-  tbody, .product__table{
-    width: 100%;
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1050px;
+    margin-left: auto;
+    margin-right: auto;
   }
-  
+}
+img{
+  height: auto;
+}
