--- a/source/sass/index/menu/menu.scss
+++ b/source/sass/index/menu/menu.scss
@@ -5,6 +5,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url(./../../../img/hero-mobile@2x.jpg);
+      background-size: 1150px auto;
+    }
   &__list {
     @include reset-list();
     align-self: stretch;
@@ -41,5 +45,23 @@
     text-align: center;
     margin-top: 76px;
     margin-bottom: 120px;
+  }
+}
+@media (min-width: $tablet-width){
+  .menu{
+    &__list {
+      display: flex;
+      margin-left: 50px;
+      margin-right: 50px;
+    }
+  }
+}
+@media (min-width: $desktop-width){
+  .menu{
+    &__list {
+      display: flex;
+      margin-left: 53px;
+      margin-right: 53px;
+    }
   }
 }
