--- a/source/sass/index/product/product.scss
+++ b/source/sass/index/product/product.scss
@@ -25,6 +25,7 @@
   }
   &__img-container {
     margin-top: 30px;
+    order: 0;
   }
   &__price {
     text-align: center;
@@ -32,5 +33,61 @@
     line-height: 20px;
     font-size: 17px;
     color: #444444;
+  }
+  &__img-wrapper{
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (min-width: $tablet-width) {
+  .product {
+    &__main {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-right: 50px;
+      margin-top: 60px;
+      margin-bottom: 35px;
+    }
+    &__week {
+      width: 60px;
+      line-height: 17px;
+    }
+    &__wrapper {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      width: 672px;
+    }
+    &__text-container{
+      width: 300px;
+      margin-right: 35px;
+    }
+    &__container {
+      display: flex;
+      align-items: center;
+      margin-top: 10px;
+    }
+    &__price {
+      margin-top: 52px;
+      margin-bottom: 30px;
+      line-height: 24px;
+      font-size: 20px;
+    }
+    &__table-cell {
+      text-align: left;
+      padding-bottom: 10px;
+    }
+    &__table {
+      margin-top: 56px;
+    }
+    &__description {
+      font-size: 17px;
+      line-height: 30px;
+    }
+    &__img-container {
+      order: 0;
+      
+    }
   }
 }
