--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -8,3 +8,7 @@ $h1-font-size:27px;
 $h2-font-size:25px;
 $h1-color:#000000;
 $h2-color:#000000;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
+$tablet-width: 768px;
+$desktop-width: 1200px;
