--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -69,9 +69,11 @@ tbody,
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1050px;
+    width: 960px;
     margin-left: auto;
     margin-right: auto;
+    padding-right: 98px;
+    padding-left: 142px;
   }
 }
 img{
