--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -69,11 +69,11 @@ tbody,
 }
 @media (min-width: 1200px) {
   .container {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-right: 98px;
-    padding-left: 142px;
+    width: 1200px;
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 50px;
+    padding-left: 244px;
   }
 }
 img{
