--- a/source/sass/index/reviews/reviews.scss
+++ b/source/sass/index/reviews/reviews.scss
@@ -9,23 +9,90 @@
     border: 1px solid #e8e8e8;
     background-color: #ffffff;
   }
-  &__button-container{
-      display: flex;
-      margin-top: 40px;
-      margin-bottom: 40px;
+  &__button-container {
+    display: flex;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
-  &__button_right{
-      background-image: url(./../../../img/huge-arrow-right.svg.png);
-      background-repeat: no-repeat;
-      background-position: center center;
+  &__button_right {
+    background-image: url(./../../../img/huge-arrow-right.svg.png);
+    background-repeat: no-repeat;
+    background-position: center center;
   }
-  &__button_left{
+  &__button_left {
     background-image: url(./../../../img/huge-arrow-left.svg.png);
     background-repeat: no-repeat;
     background-position: center center;
-}
-&__user-name{
+  }
+  &__user-name {
     color: #000000;
     font-weight: $bold;
+  }
+  &__button-write{
+    z-index: 0;
+  }
 }
+@media (min-width: $tablet-width) {
+  .reviews {
+    &__name {
+      font-weight: $bold;
+      font-size: 43px;
+      line-height: 50px;
+      color: #000000;
+      margin-bottom: 40px;
+    }
+    &__text {
+      font-size: 17px;
+      line-height: 30px;
+      margin-bottom: 60px;
+    }
+    &__button {
+      width: 100px;
+      height: 50px;
+      outline: none;
+      border: none;
+      background-color: #ffffff;
+    }
+    &__button-container {
+      display: flex;
+      margin-left: 480px;
+      margin-top: -50px;
+    }
+    &__container-main{
+      display: flex;
+      justify-content: space-between;
+    }
+    &__button-write{
+      width: 173px;
+      margin-left: 485px;
+      margin-top: -85px;
+    }
+  }
+}
+@media (min-width: $desktop-width) {
+  .reviews {
+    &__name {
+      font-weight: $bold;
+      font-size: 53px;
+      line-height: 57px;
+      color: #000000;
+      margin-bottom: 40px;
+      margin-top: 130px;
+    }
+    &__text {
+      margin-bottom: 60px;
+      width: 773px;
+    }
+    &__button-container {
+      display: flex;
+      margin-left: 680px;
+      margin-top: -50px;
+    }
+    &__button-write{
+      width: 173px;
+      margin-left: 695px;
+      margin-top: -85px;
+      margin-bottom: 70px;
+    }
+  }
 }
