prepare for end index.html

--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -60,6 +60,9 @@ tbody,
 .product__table {
   width: 100%;
 }
+.contacts__table {
+  width: 100%;
+}
 @media (min-width: 768px) {
   .container {
     width: 668px;
