--- a/source/sass/index/popup/popup.scss
+++ b/source/sass/index/popup/popup.scss
@@ -1,9 +1,16 @@
 .popup {
-  display: flex;
+  position: absolute;
+  box-shadow: 10px 10px 20px rgba(4, 6, 6, 0.2);
+  bottom: -1180px;
+  background-color: #ffffff;
+  width: 320px;
+  height: 336px;
+  z-index: 1;
+  display: none;
   flex-direction: column;
   align-items: center;
   &__name {
-      margin-bottom: -5px;
+    margin-bottom: -5px;
     font-weight: $bold;
     font-size: 25px;
     line-height: 30px;
@@ -29,13 +36,31 @@
     line-height: 16px;
     text-transform: uppercase;
   }
-  &__text{
-      margin-top: 20px;
-      margin-bottom: 30px;
+  &__text {
+    margin-top: 20px;
+    margin-bottom: 30px;
   }
-  &__button-add{
+  &__button-add {
     background-color: #63d1bb;
     border: none;
     outline: none;
   }
+}
+@media (min-width: $tablet-width) {
+  .popup {
+    bottom: -1565px;
+    left: 108px;
+    width: 568px;
+    height: 336px;
+    
+  }
+}
+@media (min-width: $desktop-width) {
+  .popup {
+    bottom: -1230px;
+    left: 430px;
+    width: 572px;
+    height: 339px;
+   
+}
 }
