--- a/source/sass/index/reviews/reviews.scss
+++ b/source/sass/index/reviews/reviews.scss
@@ -57,7 +57,11 @@
       border: none;
       background-color: #ffffff;
     }
-    
+    &__button-container {
+      display: flex;
+      margin-left: 480px;
+      margin-top: -60px;
+    }
     &__container-main{
       display: flex;
       justify-content: space-between;
