--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -73,12 +73,12 @@ tbody,
 @media (min-width: 1200px) {
   .container {
     width: 1200px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
     padding-right: 50px;
     padding-left: 244px;
   }
 }
-img{
+img {
   height: auto;
 }
