--- a/source/sass/header/header.scss
+++ b/source/sass/header/header.scss
@@ -1,7 +1,30 @@
 .header {
   min-width: 320px;
+  &__visually-hidden{
+    font-weight: $bold;
+    font-size: 17px;
+    line-height: 24px;
+    color: #000000;
+  }
   &__list {
     @include reset-list();
+  }
+  &__search-button {
+    border: none;
+    width: 320px;
+    height: 30px;
+    background-color: #fff;
+    outline: none;
+  }
+  &__search-button::before {
+    content: "";
+    width: 26px;
+    height: 25px;
+    position: absolute;
+    background-image: url(./../../img/icon-search.svg);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    left: 25px;
   }
   &__item {
     display: flex;
@@ -12,18 +35,7 @@
     color: #000000;
     padding-top: 30px;
     padding-bottom: 28px;
-    border-bottom: 1px solid  rgba($color: #000000, $alpha: 0.1);
-  }
-  &__button {
-    font-weight: $bold;
-    font-size: 17px;
-    line-height: 24px;
-    color: #ffffff;
-    background-color: #63d1bb;
-    outline: none;
-    border: none;
-    width: 100%;
-    height: 103px;
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
   }
   &__item_receipts {
     display: none;
@@ -34,36 +46,160 @@
   &__item_delivery {
     display: none;
   }
-  &__logo-container {
+  &__logo {
     display: flex;
     justify-content: center;
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
   }
+  &__item_cart::before {
+    content: "";
+    width: 26px;
+    height: 25px;
+    position: absolute;
+    background-image: url(./../../img/icon-cart.svg);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    left: 25px;
+  }
 }
-@media(min-width: $tablet-width) {
-  .header{ 
+.visually-hidden{
+  overflow: visible;
+}
+
+@media (min-width: $tablet-width) {
+  .header {
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+    &__visually-hidden{
+      display: none;
+    }
     &__list {
       @include reset-list();
       display: flex;
+      position: relative;
     }
     &__item_delivery {
       display: block;
+      position: absolute;
+      top: 70px;
+      right: 50px;
+      font-weight: $light;
+      font-size: 15px;
+      color: #444444;
+      right: -75px;
     }
-    &__logo-container {
+    &__item_catalog {
+      display: block;
+      position: absolute;
+      top: 99px;
+      left: -337px;
+    }
+    &__item_order {
+      display: block;
+      position: absolute;
+      top: 70px;
+      left: -170px;
+    }
+    &__logo {
       display: flex;
-      justify-content: start;
-     
-      margin-left: 50px;
-      margin-bottom: 20px;
-      
+      margin-top: 20px;
       border-bottom: none;
+      width: 86px;
+      height: auto;
+      position: absolute;
+      left: 45px;
     }
-    &__container{
+    &__container {
       display: flex;
+      justify-content: space-around;
     }
     &__item {
       border-bottom: none;
     }
+    &__item_cart {
+      margin-right: -75px;
+    }
+    &__item_button {
+      width: 86px;
+      height: 86px;
+      margin-right: 70px;
+    }
+    &__search-button {
+      border: none;
+      width: 86px;
+      height: 86px;
+      background-image: url(./../../img/icon-search.svg);
+      background-repeat: no-repeat;
+      background-position: 33px 31px;
+      border-right: 1px solid #ececec;
+      border-left: 1px solid #ececec;
+      background-color: #fff;
+      margin-top: -30px;
+      outline: none;
+    }
+    &__item_cart::before {
+      content: "";
+      width: 26px;
+      height: 25px;
+      position: absolute;
+      background-image: url(./../../img/icon-cart.svg);
+      background-repeat: no-repeat;
+      background-position: 0 0;
+      left: 115px;
+    }
   }
+}
+@media (min-width: $desktop-width) {
+  .header{
+    &__item_receipts {
+      display: block;
+      position: absolute;
+      font-size: 15px;
+      top: 70px;
+      left: -700px;
+    }
+    &__item_sale {
+      display: block;
+      position: absolute;
+      font-size: 15px;
+      top: 70px;
+      left: -420px;
+  }
+  &__logo {
+    display: flex;
+    margin-top: 20px;
+    border-bottom: none;
+    width: 86px;
+    height: auto;
+    position: absolute;
+    left: 670px;
+    justify-content: center;
+  }
+  &__item_delivery {
+    display: block;
+    position: absolute;
+    top: 70px;
+    right: 50px;
+    font-weight: $light;
+    font-size: 15px;
+    color: #444444;
+    right: -75px;
+  }
+  &__item_catalog {
+    display: flex;
+    position: absolute;
+    top: 0px;
+    left: -700px;
+    border-right: 1px solid rgba($color: #000000, $alpha: 0.1);
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    
+  }
+  &__item_order {
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: -420px;
+  }
+}
 }
