--- a/source/sass/index/contacts/contacts.scss
+++ b/source/sass/index/contacts/contacts.scss
@@ -77,6 +77,9 @@
       top: 2500px;
       right: 60px;
     }
+    &__button {
+      margin-bottom: 70px;
+    }
   }
 }
 @media (min-width: $desktop-width) {
@@ -114,7 +117,7 @@
       width: 60px;
       height: 90px;
       position: absolute;
-      top: 3080px;
+      top: 2900px;
       right: 60px;
       left: 210px;
     }
