--- a/source/sass/index/menu/menu.scss
+++ b/source/sass/index/menu/menu.scss
@@ -1,11 +1,12 @@
 .menu {
     background-image: url(./../../../img/hero-mobile@1x.jpg);
-    background-position: -120px -20px;
+    background-position:  top center;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: 373px;
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url(./../../../img/hero-mobile@2x.jpg);
       background-size: 575px auto;
@@ -51,8 +52,9 @@
 @media (min-width: $tablet-width){
   .menu{
     background-image: url(./../../../img/hero-tablet@1x.jpg);
-    background-position: center 0;
+    background-position:  top center;
     background-repeat: no-repeat;
+    height: 746px;
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url(./../../../img/hero-tablet@2x.jpg);
       background-size: 1150px auto;
@@ -66,7 +68,7 @@
       font-size: 43px;
       line-height: 50px;
       width: 510px;
-      margin-bottom: 372px;
+      margin-bottom: 380px;
       margin-top: 163px;
     }
     &__br{
@@ -79,10 +81,9 @@
     background-image: url(./../../../img/hero-desktop@1x.jpg);
     background-position: center bottom;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 100%;
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url(./../../../img/hero-desktop@2x.jpg);
-      background-size: 100% auto;
     }
     &__list {
       display: flex;
@@ -111,7 +112,7 @@
     &__name{
       font-size: 53px;
       line-height: 57px;
-      margin-bottom: 392px;
+      margin-bottom: 205px;
       margin-top: 267px;
   }
 }
