--- a/source/sass/index/product/product.scss
+++ b/source/sass/index/product/product.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  &__main{
+    margin-top: 130px;
+  }
   &__week {
     font-weight: $bold;
     line-height: 20px;
