--- a/source/sass/index/contacts/contacts.scss
+++ b/source/sass/index/contacts/contacts.scss
@@ -58,6 +58,7 @@
       font-size: 43px;
       line-height: 50px;
       color: #000000;
+      margin-top: 200px;
     }
     &__table-cell {
       font-size: 17px;
@@ -74,8 +75,19 @@
       background-image: url(./../../../img/icon-flag.svg);
       background-position: 0 0;
       background-repeat: no-repeat;
-      top: 2500px;
+      top: 2750px;
       right: 60px;
+    }
+    &__name::before {
+      content: "";
+      width: 768px;
+      height: 25px;
+      position: absolute;
+      background-image: url(./../../../img/bg-zigzag-line.svg);
+      background-position: 0 0;
+      background-repeat: no-repeat;
+      top: 2650px;
+      right: 1px;
     }
     &__button {
       margin-bottom: 70px;
@@ -99,6 +111,15 @@
     &__name {
       font-size: 53px;
       line-height: 57px;
+      margin-top: 150px;
+    }
+    &__name::before {
+      content: "";
+      width: 1050px;
+      height: 25px;
+      position: absolute;
+      top: 2850px;
+      left: 230px;
     }
     &__table-line_bot {
       margin-left: 0px;
@@ -117,7 +138,7 @@
       width: 60px;
       height: 90px;
       position: absolute;
-      top: 2900px;
+      top: 3050px;
       right: 60px;
       left: 210px;
     }
