--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @import "./index/index.scss";
 @import "./header/header.scss";
 @import "./footer/footer.scss";
+@import "./catalog/index.scss";
 
 
 
