--- a/source/sass/index/reviews/reviews.scss
+++ b/source/sass/index/reviews/reviews.scss
@@ -28,22 +28,26 @@
     color: #000000;
     font-weight: $bold;
   }
-  &__wrapper{
+  &__wrapper {
     display: flex;
     flex-direction: column;
   }
-  &__button-write{
+  &__button-write {
     order: 1;
   }
 }
 @media (min-width: $tablet-width) {
   .reviews {
+    background-image: url(./../../../img/review@1x.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 0;
     &__name {
       font-weight: $bold;
       font-size: 43px;
       line-height: 50px;
       color: #000000;
       margin-bottom: 40px;
+      padding-top: 100px;
     }
     &__text {
       font-size: 17px;
@@ -62,11 +66,11 @@
       margin-left: 480px;
       margin-top: -60px;
     }
-    &__container-main{
+    &__container-main {
       display: flex;
       justify-content: space-between;
     }
-    &__button-write{
+    &__button-write {
       width: 173px;
       margin-left: 485px;
       margin-top: -85px;
@@ -76,16 +80,21 @@
 }
 @media (min-width: $desktop-width) {
   .reviews {
+    background-image: url(./../../../img/review@1x.jpg);
+    background-repeat: no-repeat;
+    background-position: 190px 0;
+    height: 457px;
     &__name {
       font-weight: $bold;
       font-size: 53px;
       line-height: 57px;
       color: #000000;
-      margin-bottom: 40px;
+      margin-bottom: -10px;
       margin-top: 130px;
+      padding-top: 50px;
     }
     &__text {
-      margin-bottom: 60px;
+      margin-bottom: 10px;
       width: 773px;
     }
     &__button-container {
@@ -93,7 +102,7 @@
       margin-left: 680px;
       margin-top: -50px;
     }
-    &__button-write{
+    &__button-write {
       width: 173px;
       margin-left: 695px;
       margin-top: -85px;
