--- a/source/sass/button/button.scss
+++ b/source/sass/button/button.scss
@@ -10,7 +10,7 @@
   color: #444444;
   text-transform: uppercase;
 }
-.button_without-border{
+.button_without-border {
   @include reset-btn();
   width: 260px;
   height: 52px;
@@ -18,6 +18,18 @@
   text-align: center;
   font-weight: $bold;
   line-height: 20px;
+  font-size: 17px;
+  color: #444444;
+  text-transform: uppercase;
+}
+.button-video {
+  @include reset-btn();
+  width: 192px;
+  height: 52px;
+  border: 2px solid #444444;
+  text-align: center;
+  font-weight: $bold;
+  line-height: 16px;
   font-size: 17px;
   color: #444444;
   text-transform: uppercase;
@@ -35,16 +47,43 @@
   text-transform: uppercase;
 }
 @media (min-width: $tablet-width) {
-.button-small{
-  @include reset-btn();
-  width: 175px;
-  height: 52px;
-  border: 2px solid #444444;
-  text-align: center;
-  font-weight: $bold;
-  line-height: 20px;
-  font-size: 17px;
-  color: #444444;
-  text-transform: uppercase;
+  .button-small {
+    @include reset-btn();
+    width: 175px;
+    height: 52px;
+    border: 2px solid #444444;
+    text-align: center;
+    font-weight: $bold;
+    line-height: 20px;
+    font-size: 17px;
+    color: #444444;
+    text-transform: uppercase;
+  }
+  .button-video {
+    @include reset-btn();
+    width: 584px;
+    height: 52px;
+    border: 2px solid #444444;
+    text-align: center;
+    font-weight: $bold;
+    line-height: 16px;
+    font-size: 17px;
+    color: #444444;
+    text-transform: uppercase;
+  }
 }
+@media (min-width: $desktop-width) {
+  .button-video {
+    @include reset-btn();
+    width: 230px;
+    height: 52px;
+    border: 2px solid #444444;
+    text-align: center;
+    font-weight: $bold;
+    line-height: 16px;
+    font-size: 17px;
+    color: #444444;
+    text-transform: uppercase;
+  }
 }
+
