--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -82,3 +82,22 @@ tbody,
 img {
   height: auto;
 }
+.catalog-container {
+  width: 260px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 768px) {
+  .catalog-container {
+    width: 668px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (min-width: 1200px) {
+  .catalog-container {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
