--- a/source/sass/catalog/video/video.scss
+++ b/source/sass/catalog/video/video.scss
@@ -89,37 +89,6 @@
     }
   }
 }
-@media (min-width: $tablet-width) {
-  .video {
-    &__name {
-      order: 0;
-      width: 250px;
-      margin-top: 40px;
-      margin-left: 100px;
-      font-size: 20px;
-    }
-    &__name::before {
-      content: "";
-      width: 41px;
-      height: 41px;
-      position: absolute;
-      left: 85px;
-      top: 2020px;
-    }
-    &__description {
-      font-weight: $light;
-      font-size: 15px;
-      line-height: 30px;
-      width: 581px;
-      margin-left: 35px;
-      margin-top: 30px;
-    }
-    &__container {
-      margin-top: 60px;
-      margin-bottom: 50px;
-    }
-  }
-}
 @media (min-width: $desktop-width) {
   .video {
     &__name {
@@ -155,6 +124,13 @@
     &__wrapper {
       margin-top: 150px;
       margin-left: -120px;
+    }
+    &__img-container::before {
+      content: "";
+      width: 110px;
+      height: 85px;
+      left: 395px;
+      top: 1340px;
     }
   }
 }
