--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "./header/header.scss";
 @import "./footer/footer.scss";
 @import "./catalog/index.scss";
+@import "./form/index.scss";
 
 
 
